feat(socket.io): 实现Socket.IO客户端兼容层并添加测试页面
refactor(websocket): 重构WebSocket管理类以兼容Socket.IO协议

docs: 更新WebSocket兼容性文档和阿里云部署指南

test: 添加Socket.IO连接测试页面和相关测试脚本

--- a/.trae/documents/技术架构文档.md
+++ b/.trae/documents/技术架构文档.md
@@ -165,27 +165,69 @@ POST /api/payments
 | ------------- | ------ | ------ |
 | paymentParams | object | 微信支付参数 |
 
-### 4.4 WebSocket事件
+### 4.4 WebSocket配置与实现
+
+**✅ WebSocket服务已启用**
+
+**服务器端配置：**
+- 技术栈：Socket.IO 4.7.4
+- 主要配置文件：`api/app.js` (第21-26行)
+- 服务实现文件：`api/services/socketService.js`
+- 端口：3000 (与HTTP服务共用)
+
+**客户端配置：**
+- 连接管理：`miniprogram/utils/websocket.js`
+- 配置文件：`miniprogram/utils/config.js`
+- WebSocket地址：`ws://localhost:3000`
+
+**认证机制：**
+```javascript
+// 服务器端认证中间件
+io.use(async (socket, next) => {
+  const token = socket.handshake.auth.token;
+  const decoded = jwt.verify(token, jwtConfig.secret);
+  socket.userId = decoded.userId;
+  socket.userType = decoded.userType;
+  next();
+});
+```
+
+**支持的事件类型：**
 
 **连接认证**
-
 ```
 Event: auth
 Data: { token: string }
 ```
 
 **工单状态更新**
-
 ```
 Event: order-status-update
 Data: { orderId: string, status: string, message: string }
 ```
 
 **新工单推送（电工）**
-
 ```
 Event: new-order
 Data: { orderId: string, orderInfo: object }
+```
+
+**位置更新（电工）**
+```
+Event: update_location
+Data: { latitude: number, longitude: number }
+```
+
+**消息发送**
+```
+Event: send_message
+Data: { type: string, target: string, content: string, orderId: string }
+```
+
+**心跳检测**
+```
+Event: heartbeat
+Response: heartbeat_ack
 ```
 
 ## 5. 服务器架构图
