修复Socket.IO连接问题和WebSocket重连机制

--- a/.trae/documents/技术架构文档.md
+++ b/.trae/documents/技术架构文档.md
@@ -170,17 +170,25 @@ POST /api/payments
 **✅ WebSocket服务已启用**
 
 **服务器端配置：**
-- 技术栈：Socket.IO 4.7.4
-- 主要配置文件：`api/app.js` (第21-26行)
-- 服务实现文件：`api/services/socketService.js`
-- 端口：3000 (与HTTP服务共用)
+
+* 技术栈：Socket.IO 4.7.4
+
+* 主要配置文件：`api/app.js` (第21-26行)
+
+* 服务实现文件：`api/services/socketService.js`
+
+* 端口：3000 (与HTTP服务共用)
 
 **客户端配置：**
-- 连接管理：`miniprogram/utils/websocket.js`
-- 配置文件：`miniprogram/utils/config.js`
-- WebSocket地址：`ws://localhost:3000`
+
+* 连接管理：`miniprogram/utils/websocket.js`
+
+* 配置文件：`miniprogram/utils/config.js`
+
+* WebSocket地址：`ws://localhost:3000`
 
 **认证机制：**
+
 ```javascript
 // 服务器端认证中间件
 io.use(async (socket, next) => {
@@ -195,36 +203,42 @@ io.use(async (socket, next) => {
 **支持的事件类型：**
 
 **连接认证**
+
 ```
 Event: auth
 Data: { token: string }
 ```
 
 **工单状态更新**
+
 ```
 Event: order-status-update
 Data: { orderId: string, status: string, message: string }
 ```
 
 **新工单推送（电工）**
+
 ```
 Event: new-order
 Data: { orderId: string, orderInfo: object }
 ```
 
 **位置更新（电工）**
+
 ```
 Event: update_location
 Data: { latitude: number, longitude: number }
 ```
 
 **消息发送**
+
 ```
 Event: send_message
 Data: { type: string, target: string, content: string, orderId: string }
 ```
 
 **心跳检测**
+
 ```
 Event: heartbeat
 Response: heartbeat_ack
@@ -270,65 +284,152 @@ erDiagram
     ELECTRICIANS ||--o{ EVALUATIONS : gets
     
     USERS {
-        varchar id PK
+        int id PK
         varchar openid
+        varchar unionid
         varchar phone
         varchar name
+        varchar nickname
         varchar avatar
+        enum gender
         enum user_type
+        enum status
+        varchar id_card
+        varchar address
+        varchar city
+        varchar province
+        datetime last_login_at
         datetime created_at
         datetime updated_at
     }
     
     ELECTRICIANS {
-        varchar id PK
-        varchar user_id FK
-        varchar real_name
-        varchar id_card
-        varchar license_number
-        date license_expire
-        enum status
+        int id PK
+        int user_id FK
+        varchar certificate_number
+        enum certificate_type
+        json certificate_images
+        int experience_years
+        json specialties
+        json service_areas
+        enum work_status
+        enum verification_status
+        text verification_note
         decimal rating
-        int order_count
+        int total_orders
+        int completed_orders
+        decimal total_earnings
+        decimal current_latitude
+        decimal current_longitude
+        datetime location_updated_at
+        boolean emergency_available
+        decimal min_order_amount
+        text introduction
+        json work_images
         datetime created_at
         datetime updated_at
     }
     
     ORDERS {
-        varchar id PK
-        varchar user_id FK
-        varchar electrician_id FK
+        int id PK
+        varchar order_no
+        int user_id FK
+        int electrician_id FK
+        varchar title
+        text description
+        enum category
+        enum priority
+        enum status
         varchar contact_name
         varchar contact_phone
-        text address
-        text description
-        enum urgent_type
-        enum status
-        decimal amount
-        text repair_content
+        varchar address
+        decimal latitude
+        decimal longitude
         json images
+        decimal estimated_amount
+        decimal quoted_amount
+        decimal final_amount
+        text quote_note
+        text work_content
+        json work_images
+        json completion_images
+        datetime scheduled_time
+        datetime accepted_at
+        datetime arrived_at
+        datetime quoted_at
+        datetime started_at
+        datetime completed_at
+        datetime cancelled_at
+        varchar cancel_reason
+        enum cancel_by
+        int rating
+        text rating_comment
+        datetime rated_at
+        enum payment_status
+        enum payment_method
+        varchar transaction_id
+        datetime paid_at
+        text notes
         datetime created_at
         datetime updated_at
     }
     
     PAYMENTS {
-        varchar id PK
-        varchar order_id FK
+        int id PK
+        varchar payment_no
+        int order_id FK
+        int user_id FK
+        int electrician_id FK
         decimal amount
-        varchar transaction_id
+        decimal platform_fee
+        decimal electrician_amount
+        enum payment_method
+        varchar payment_channel
         enum status
+        varchar transaction_id
+        varchar prepay_id
+        varchar out_trade_no
+        varchar trade_type
+        varchar openid
+        varchar bank_type
+        enum settlement_status
+        datetime settled_at
+        decimal refund_amount
+        varchar refund_reason
+        datetime refunded_at
+        json callback_data
+        varchar notify_url
+        varchar return_url
+        datetime expire_time
         datetime paid_at
+        varchar failed_reason
+        int retry_count
+        text notes
         datetime created_at
+        datetime updated_at
     }
     
-    EVALUATIONS {
-        varchar id PK
-        varchar order_id FK
-        varchar user_id FK
-        varchar electrician_id FK
+    REVIEWS {
+        int id PK
+        int order_id FK
+        int user_id FK
+        int electrician_id FK
         int rating
+        int service_rating
+        int skill_rating
+        int punctuality_rating
         text comment
+        json tags
+        json images
+        boolean is_anonymous
+        boolean is_visible
+        text reply_content
+        datetime replied_at
+        int helpful_count
+        int report_count
+        enum status
         datetime created_at
+        datetime updated_at
     }
 ```
 
@@ -339,19 +440,31 @@ erDiagram
 ```sql
 -- 创建用户表
 CREATE TABLE users (
-    id VARCHAR(32) PRIMARY KEY DEFAULT (REPLACE(UUID(), '-', '')),
+    id INT PRIMARY KEY AUTO_INCREMENT COMMENT '用户ID',
     openid VARCHAR(100) UNIQUE NOT NULL COMMENT '微信openid',
-    phone VARCHAR(20) UNIQUE COMMENT '手机号',
-    name VARCHAR(50) COMMENT '用户姓名',
+    unionid VARCHAR(100) COMMENT '微信unionid',
+    phone VARCHAR(20) UNIQUE COMMENT '手机号码',
+    name VARCHAR(50) COMMENT '真实姓名',
+    nickname VARCHAR(50) COMMENT '微信昵称',
     avatar VARCHAR(500) COMMENT '头像URL',
-    user_type ENUM('user', 'electrician') DEFAULT 'user' COMMENT '用户类型',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
-);
+    gender ENUM('male', 'female', 'unknown') DEFAULT 'unknown' COMMENT '性别',
+    user_type ENUM('user', 'electrician', 'admin') DEFAULT 'user' COMMENT '用户类型',
+    status ENUM('active', 'inactive', 'banned') DEFAULT 'active' COMMENT '账户状态',
+    id_card VARCHAR(20) COMMENT '身份证号码',
+    address VARCHAR(200) COMMENT '地址',
+    city VARCHAR(50) COMMENT '城市',
+    province VARCHAR(50) COMMENT '省份',
+    last_login_at DATETIME COMMENT '最后登录时间',
+    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间'
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 
 -- 创建索引
 CREATE INDEX idx_users_openid ON users(openid);
 CREATE INDEX idx_users_phone ON users(phone);
+CREATE INDEX idx_users_user_type ON users(user_type);
+CREATE INDEX idx_users_status ON users(status);
+CREATE INDEX idx_users_city ON users(city);
 ```
 
 **电工表（electricians）**
@@ -359,24 +472,41 @@ CREATE INDEX idx_users_phone ON users(phone);
 ```sql
 -- 创建电工表
 CREATE TABLE electricians (
-    id VARCHAR(32) PRIMARY KEY DEFAULT (REPLACE(UUID(), '-', '')),
-    user_id VARCHAR(32) NOT NULL COMMENT '关联用户ID',
-    real_name VARCHAR(50) NOT NULL COMMENT '真实姓名',
-    id_card VARCHAR(20) NOT NULL COMMENT '身份证号',
-    license_number VARCHAR(50) NOT NULL COMMENT '电工证编号',
-    license_expire DATE NOT NULL COMMENT '电工证有效期',
-    status ENUM('pending', 'approved', 'rejected', 'suspended') DEFAULT 'pending' COMMENT '认证状态',
-    rating DECIMAL(3,2) DEFAULT 5.00 COMMENT '评分',
-    order_count INT DEFAULT 0 COMMENT '完成订单数',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+    id INT PRIMARY KEY AUTO_INCREMENT COMMENT '电工ID',
+    user_id INT NOT NULL UNIQUE COMMENT '关联用户ID',
+    certificate_number VARCHAR(50) NOT NULL UNIQUE COMMENT '电工证编号',
+    certificate_type ENUM('low_voltage', 'high_voltage', 'special') NOT NULL COMMENT '电工证类型',
+    certificate_images JSON COMMENT '电工证照片URLs',
+    experience_years INT NOT NULL DEFAULT 0 COMMENT '从业年限',
+    specialties JSON COMMENT '专业技能领域',
+    service_areas JSON COMMENT '服务区域',
+    work_status ENUM('available', 'busy', 'offline') DEFAULT 'offline' COMMENT '工作状态',
+    verification_status ENUM('pending', 'approved', 'rejected') DEFAULT 'pending' COMMENT '认证状态',
+    verification_note TEXT COMMENT '审核备注',
+    rating DECIMAL(3,2) DEFAULT 5.00 COMMENT '评分（1-5分）',
+    total_orders INT DEFAULT 0 COMMENT '总接单数',
+    completed_orders INT DEFAULT 0 COMMENT '完成订单数',
+    total_earnings DECIMAL(10,2) DEFAULT 0.00 COMMENT '总收入',
+    current_latitude DECIMAL(10,8) COMMENT '当前纬度',
+    current_longitude DECIMAL(11,8) COMMENT '当前经度',
+    location_updated_at DATETIME COMMENT '位置更新时间',
+    emergency_available BOOLEAN DEFAULT FALSE COMMENT '是否接受紧急工单',
+    min_order_amount DECIMAL(8,2) DEFAULT 50.00 COMMENT '最低接单金额',
+    introduction TEXT COMMENT '个人介绍',
+    work_images JSON COMMENT '工作照片展示',
+    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
     FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 
 -- 创建索引
 CREATE INDEX idx_electricians_user_id ON electricians(user_id);
-CREATE INDEX idx_electricians_status ON electricians(status);
+CREATE INDEX idx_electricians_certificate_number ON electricians(certificate_number);
+CREATE INDEX idx_electricians_verification_status ON electricians(verification_status);
+CREATE INDEX idx_electricians_work_status ON electricians(work_status);
 CREATE INDEX idx_electricians_rating ON electricians(rating DESC);
+CREATE INDEX idx_electricians_location ON electricians(current_latitude, current_longitude);
+CREATE INDEX idx_electricians_emergency_available ON electricians(emergency_available);
 ```
 
 **工单表（orders）**
@@ -384,74 +514,140 @@ CREATE INDEX idx_electricians_rating ON electricians(rating DESC);
 ```sql
 -- 创建工单表
 CREATE TABLE orders (
-    id VARCHAR(32) PRIMARY KEY DEFAULT (REPLACE(UUID(), '-', '')),
-    user_id VARCHAR(32) NOT NULL COMMENT '用户ID',
-    electrician_id VARCHAR(32) COMMENT '电工ID',
-    contact_name VARCHAR(50) NOT NULL COMMENT '联系人',
-    contact_phone VARCHAR(20) NOT NULL COMMENT '联系电话',
-    address TEXT NOT NULL COMMENT '维修地址',
+    id INT PRIMARY KEY AUTO_INCREMENT COMMENT '工单ID',
+    order_no VARCHAR(20) UNIQUE NOT NULL COMMENT '工单编号',
+    user_id INT NOT NULL COMMENT '用户ID',
+    electrician_id INT COMMENT '电工ID',
+    title VARCHAR(100) NOT NULL COMMENT '工单标题',
     description TEXT NOT NULL COMMENT '故障描述',
-    urgent_type ENUM('urgent', 'normal') DEFAULT 'normal' COMMENT '紧急程度',
-    status ENUM('pending', 'accepted', 'confirmed', 'completed', 'paid', 'cancelled') DEFAULT 'pending' COMMENT '工单状态',
-    amount DECIMAL(10,2) COMMENT '维修金额',
-    repair_content TEXT COMMENT '维修内容',
-    images JSON COMMENT '图片URLs',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+    fault_type ENUM('circuit', 'appliance', 'lighting', 'installation', 'maintenance', 'emergency', 'other') NOT NULL COMMENT '故障类型',
+    priority ENUM('low', 'medium', 'high', 'urgent') DEFAULT 'medium' COMMENT '优先级',
+    status ENUM('pending', 'accepted', 'in_progress', 'completed', 'cancelled', 'expired') DEFAULT 'pending' COMMENT '工单状态',
+    contact_phone VARCHAR(20) NOT NULL COMMENT '联系电话',
+    contact_name VARCHAR(50) COMMENT '联系人姓名',
+    address VARCHAR(200) NOT NULL COMMENT '服务地址',
+    latitude DECIMAL(10,8) COMMENT '纬度',
+    longitude DECIMAL(11,8) COMMENT '经度',
+    images JSON COMMENT '故障图片URLs',
+    estimated_amount DECIMAL(8,2) COMMENT '预估金额',
+    quoted_amount DECIMAL(8,2) COMMENT '报价金额',
+    actual_amount DECIMAL(8,2) COMMENT '实际金额',
+    repair_content TEXT COMMENT '维修内容描述',
+    repair_images JSON COMMENT '维修完成图片URLs',
+    scheduled_at DATETIME COMMENT '预约服务时间',
+    accepted_at DATETIME COMMENT '接单时间',
+    started_at DATETIME COMMENT '开始服务时间',
+    completed_at DATETIME COMMENT '完成时间',
+    cancelled_at DATETIME COMMENT '取消时间',
+    cancel_reason TEXT COMMENT '取消原因',
+    cancel_by ENUM('user', 'electrician', 'system') COMMENT '取消方',
+    rating INT COMMENT '用户评分（1-5分）',
+    payment_status ENUM('unpaid', 'paid', 'refunded', 'partial_refund') DEFAULT 'unpaid' COMMENT '支付状态',
+    payment_method ENUM('wechat', 'alipay', 'cash', 'bank_transfer') COMMENT '支付方式',
+    transaction_id VARCHAR(100) COMMENT '支付交易号',
+    paid_at DATETIME COMMENT '支付时间',
+    notes TEXT COMMENT '备注信息',
+    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
     FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
     FOREIGN KEY (electrician_id) REFERENCES electricians(id) ON DELETE SET NULL
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 
 -- 创建索引
+CREATE UNIQUE INDEX idx_orders_order_no ON orders(order_no);
 CREATE INDEX idx_orders_user_id ON orders(user_id);
 CREATE INDEX idx_orders_electrician_id ON orders(electrician_id);
 CREATE INDEX idx_orders_status ON orders(status);
+CREATE INDEX idx_orders_fault_type ON orders(fault_type);
+CREATE INDEX idx_orders_priority ON orders(priority);
+CREATE INDEX idx_orders_payment_status ON orders(payment_status);
 CREATE INDEX idx_orders_created_at ON orders(created_at DESC);
-CREATE INDEX idx_orders_urgent_type ON orders(urgent_type);
+CREATE INDEX idx_orders_location ON orders(latitude, longitude);
+CREATE INDEX idx_orders_scheduled_at ON orders(scheduled_at);
 ```
 
 **支付表（payments）**
 
 ```sql
--- 创建支付表
-CREATE TABLE payments (
-    id VARCHAR(32) PRIMARY KEY DEFAULT (REPLACE(UUID(), '-', '')),
-    order_id VARCHAR(32) NOT NULL COMMENT '工单ID',
-    amount DECIMAL(10,2) NOT NULL COMMENT '支付金额',
-    transaction_id VARCHAR(100) COMMENT '微信交易号',
-    status ENUM('pending', 'paid', 'failed', 'refunded') DEFAULT 'pending' COMMENT '支付状态',
-    paid_at TIMESTAMP NULL COMMENT '支付时间',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE
-);
-
--- 创建索引
-CREATE INDEX idx_payments_order_id ON payments(order_id);
-CREATE INDEX idx_payments_status ON payments(status);
-CREATE INDEX idx_payments_transaction_id ON payments(transaction_id);
-```
-
-**评价表（evaluations）**
-
-```sql
 -- 创建评价表
-CREATE TABLE evaluations (
-    id VARCHAR(32) PRIMARY KEY DEFAULT (REPLACE(UUID(), '-', '')),
-    order_id VARCHAR(32) NOT NULL COMMENT '工单ID',
-    user_id VARCHAR(32) NOT NULL COMMENT '用户ID',
-    electrician_id VARCHAR(32) NOT NULL COMMENT '电工ID',
-    rating INT NOT NULL CHECK (rating >= 1 AND rating <= 5) COMMENT '评分1-5星',
-    comment TEXT COMMENT '评价内容',
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+CREATE TABLE reviews (
+    id INT PRIMARY KEY AUTO_INCREMENT COMMENT '评价ID',
+    order_id INT NOT NULL UNIQUE COMMENT '关联工单ID',
+    user_id INT NOT NULL COMMENT '用户ID',
+    electrician_id INT NOT NULL COMMENT '电工ID',
+    service_rating INT NOT NULL COMMENT '服务态度评分（1-5分）',
+    quality_rating INT NOT NULL COMMENT '服务质量评分（1-5分）',
+    speed_rating INT NOT NULL COMMENT '响应速度评分（1-5分）',
+    overall_rating DECIMAL(3,2) NOT NULL COMMENT '综合评分（1-5分）',
+    content TEXT COMMENT '评价内容',
+    tags JSON COMMENT '评价标签',
+    images JSON COMMENT '评价图片URLs',
+    is_anonymous BOOLEAN DEFAULT FALSE COMMENT '是否匿名评价',
+    reply_content TEXT COMMENT '电工回复内容',
+    reply_at DATETIME COMMENT '回复时间',
+    helpful_count INT DEFAULT 0 COMMENT '有用数',
+    report_count INT DEFAULT 0 COMMENT '举报数',
+    status ENUM('normal', 'hidden', 'deleted') DEFAULT 'normal' COMMENT '评价状态',
+    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
     FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
     FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
     FOREIGN KEY (electrician_id) REFERENCES electricians(id) ON DELETE CASCADE
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 
 -- 创建索引
-CREATE INDEX idx_evaluations_order_id ON evaluations(order_id);
-CREATE INDEX idx_evaluations_electrician_id ON evaluations(electrician_id);
-CREATE INDEX idx_evaluations_rating ON evaluations(rating DESC);
+CREATE UNIQUE INDEX idx_reviews_order_id ON reviews(order_id);
+CREATE INDEX idx_reviews_user_id ON reviews(user_id);
+CREATE INDEX idx_reviews_electrician_id ON reviews(electrician_id);
+CREATE INDEX idx_reviews_overall_rating ON reviews(overall_rating DESC);
+CREATE INDEX idx_reviews_status ON reviews(status);
+CREATE INDEX idx_reviews_created_at ON reviews(created_at DESC);
+CREATE INDEX idx_reviews_is_anonymous ON reviews(is_anonymous);
+
+-- 初始化数据
+INSERT INTO users (openid, name, user_type) VALUES 
+('test_admin_openid', '系统管理员', 'user'),
+('test_user_openid', '测试用户', 'user'),
+('test_electrician_openid', '测试电工', 'electrician');
+```
+
+**评价表（reviews）**
+
+```sql
+-- 创建评价表
+CREATE TABLE reviews (
+    id INT PRIMARY KEY AUTO_INCREMENT COMMENT '评价ID',
+    order_id INT NOT NULL UNIQUE COMMENT '关联工单ID',
+    user_id INT NOT NULL COMMENT '用户ID',
+    electrician_id INT NOT NULL COMMENT '电工ID',
+    service_rating INT NOT NULL COMMENT '服务态度评分（1-5分）',
+    quality_rating INT NOT NULL COMMENT '服务质量评分（1-5分）',
+    speed_rating INT NOT NULL COMMENT '响应速度评分（1-5分）',
+    overall_rating DECIMAL(3,2) NOT NULL COMMENT '综合评分（1-5分）',
+    content TEXT COMMENT '评价内容',
+    tags JSON COMMENT '评价标签',
+    images JSON COMMENT '评价图片URLs',
+    is_anonymous BOOLEAN DEFAULT FALSE COMMENT '是否匿名评价',
+    reply_content TEXT COMMENT '电工回复内容',
+    reply_at DATETIME COMMENT '回复时间',
+    helpful_count INT DEFAULT 0 COMMENT '有用数',
+    report_count INT DEFAULT 0 COMMENT '举报数',
+    status ENUM('normal', 'hidden', 'deleted') DEFAULT 'normal' COMMENT '评价状态',
+    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
+    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
+    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
+    FOREIGN KEY (electrician_id) REFERENCES electricians(id) ON DELETE CASCADE
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+
+-- 创建索引
+CREATE UNIQUE INDEX idx_reviews_order_id ON reviews(order_id);
+CREATE INDEX idx_reviews_user_id ON reviews(user_id);
+CREATE INDEX idx_reviews_electrician_id ON reviews(electrician_id);
+CREATE INDEX idx_reviews_overall_rating ON reviews(overall_rating DESC);
+CREATE INDEX idx_reviews_status ON reviews(status);
+CREATE INDEX idx_reviews_created_at ON reviews(created_at DESC);
+CREATE INDEX idx_reviews_is_anonymous ON reviews(is_anonymous);
 
 -- 初始化数据
 INSERT INTO users (openid, name, user_type) VALUES 
