修改申请成为电工页面：删除工作经验模块，将资质证明改为填写证书号码和有效期限

--- a/.trae/documents/技术架构文档.md
+++ b/.trae/documents/技术架构文档.md
@@ -67,6 +67,143 @@ graph TD
 | /pages/common/messages          | 消息中心            |
 | /pages/common/customer-service  | 客服页面            |
 
+## 3.5 用户认证流程
+
+### 3.5.1 微信登录流程
+
+```mermaid
+sequenceDiagram
+    participant MP as 微信小程序
+    participant WX as 微信服务器
+    participant API as 后端API
+    participant DB as 数据库
+    
+    MP->>WX: wx.login() 获取code
+    WX-->>MP: 返回临时登录凭证code
+    MP->>API: POST /api/auth/wx-login {code}
+    API->>WX: 调用微信接口验证code
+    WX-->>API: 返回openid和session_key
+    API->>DB: 查询或创建用户记录
+    DB-->>API: 返回用户信息
+    API->>API: 生成JWT token
+    API-->>MP: 返回{token, user, refreshToken}
+    MP->>MP: 保存token到本地存储
+    
+    Note over MP,DB: 后续请求携带token进行身份验证
+    MP->>API: 业务请求 + Authorization: Bearer token
+    API->>API: 验证token有效性
+    API-->>MP: 返回业务数据
+```
+
+### 3.5.2 手机号登录流程
+
+```mermaid
+sequenceDiagram
+    participant MP as 微信小程序
+    participant API as 后端API
+    participant SMS as 短信服务
+    participant DB as 数据库
+    
+    MP->>API: POST /api/auth/send-sms {phone}
+    API->>SMS: 发送验证码
+    SMS-->>MP: 用户收到短信验证码
+    MP->>API: POST /api/auth/phone-login {phone, code}
+    API->>API: 验证短信验证码
+    API->>DB: 查询用户记录
+    DB-->>API: 返回用户信息
+    API->>API: 生成JWT token
+    API-->>MP: 返回{token, user, refreshToken}
+    MP->>MP: 保存token到本地存储
+    
+    Note over MP,DB: 后续请求携带token进行身份验证
+    MP->>API: 业务请求 + Authorization: Bearer token
+    API->>API: 验证token有效性
+    API-->>MP: 返回业务数据
+```
+
+### 3.5.3 Token认证机制
+
+**JWT Token结构**
+
+```json
+{
+  "header": {
+    "alg": "HS256",
+    "typ": "JWT"
+  },
+  "payload": {
+    "userId": "用户ID",
+    "openid": "微信openid",
+    "userType": "用户类型(user/electrician)",
+    "iat": "签发时间",
+    "exp": "过期时间"
+  },
+  "signature": "签名"
+}
+```
+
+**Token验证流程**
+
+```mermaid
+flowchart TD
+    A[客户端发起请求] --> B[检查Authorization头]
+    B --> C{是否包含Bearer token?}
+    C -->|否| D[返回401未授权]
+    C -->|是| E[解析JWT token]
+    E --> F{token格式正确?}
+    F -->|否| D
+    F -->|是| G[验证token签名]
+    G --> H{签名有效?}
+    H -->|否| D
+    H -->|是| I[检查token过期时间]
+    I --> J{token已过期?}
+    J -->|是| K[尝试刷新token]
+    J -->|否| L[从token获取用户信息]
+    K --> M{刷新成功?}
+    M -->|否| D
+    M -->|是| L
+    L --> N[继续处理业务请求]
+```
+
+### 3.5.4 登录状态管理
+
+**本地存储管理**
+
+* **Token存储**: 使用微信小程序的`wx.setStorageSync()`将JWT token存储在本地
+
+* **用户信息缓存**: 同时缓存用户基本信息，减少API调用
+
+* **自动登录**: 应用启动时检查本地token，自动恢复登录状态
+
+**Token刷新策略**
+
+* **主动刷新**: Token过期前主动调用刷新接口
+
+* **被动刷新**: API返回401时自动尝试刷新token
+
+* **刷新失败**: 清除本地认证信息，引导用户重新登录
+
+**登出处理**
+
+```mermaid
+flowchart TD
+    A[用户点击登出] --> B[调用登出API]
+    B --> C[服务端清理session]
+    C --> D[客户端清除本地token]
+    D --> E[清除用户信息缓存]
+    E --> F[跳转到登录页面]
+```
+
+**安全考虑**
+
+* **Token加密**: 使用HTTPS传输，防止token被截获
+
+* **过期时间**: 设置合理的token过期时间（如7天）
+
+* **刷新机制**: 使用refresh token延长登录状态
+
+* **设备绑定**: 可选择绑定设备信息，增强安全性
+
 ## 4. API定义
 
 ### 4.1 用户认证相关
@@ -74,7 +211,7 @@ graph TD
 **微信登录**
 
 ```
-POST /api/auth/wechat-login
+POST /api/auth/wx-login
 ```
 
 请求参数：
